clusters/production/monitoring/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: monitoring
spec:
  parentRefs:
  - name: external-gateway
    namespace: ingress
  hostnames:
  - dashboard.sigdep.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
      namespace: monitoring
